// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FundEscrow should render the FundEscrow view 1`] = `
<Screen
  header={<FundEscrowHeader />}
>
  <ForwardRef
    contentStyle={
      {
        "alignItems": "center",
        "gap": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <PeachText
        style={
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 32,
            "textTransform": "lowercase",
          }
        }
      >
        send
      </PeachText>
      <BTCAmount
        amount={100000}
        size="medium"
        style={
          {
            "marginTop": -2,
          }
        }
      />
      <CopyAble
        textPosition="bottom"
        value="bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh"
      />
    </View>
    <BitcoinAddress
      address="bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh"
      amount={0.001}
      label="Peach Escrow - offer P‑26"
    />
  </ForwardRef>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 16,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingTop": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
        }
      }
    >
      <PeachText
        style={
          {
            "color": "#F56522",
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.5,
            "lineHeight": 24,
            "textTransform": "uppercase",
          }
        }
      >
        checking funding status
      </PeachText>
      <Loading
        color="#F56522"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    </View>
    <HorizontalLine />
    <PrimaryButton
      border={true}
      iconId="sell"
      onPress={[MockFunction]}
    >
      fund from peach wallet
    </PrimaryButton>
  </View>
</Screen>
`;

exports[`FundEscrow should show Loading, while escrow creation is pending 1`] = `
<BitcoinLoading
  text="creating escrow,
one sec..."
/>
`;

exports[`FundEscrow should show Loading, while escrow is not defined 1`] = `
<BitcoinLoading
  text="creating escrow,
one sec..."
/>
`;

exports[`FundEscrow should show NoEscrowFound, if no there is an error while creating escrow 1`] = `<NoEscrowFound />`;

exports[`FundEscrow should show TransactionInMempool, if fundingStatus is MEMPOOL 1`] = `
<TransactionInMempool
  txId="txId"
/>
`;

exports[`FundEscrow should show funded from peach wallet, if funded from peach wallet 1`] = `
<Screen
  header={<FundEscrowHeader />}
>
  <ForwardRef
    contentStyle={
      {
        "alignItems": "center",
        "gap": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <PeachText
        style={
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 32,
            "textTransform": "lowercase",
          }
        }
      >
        send
      </PeachText>
      <BTCAmount
        amount={100000}
        size="medium"
        style={
          {
            "marginTop": -2,
          }
        }
      />
      <CopyAble
        textPosition="bottom"
        value="bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh"
      />
    </View>
    <BitcoinAddress
      address="bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh"
      amount={0.001}
      label="Peach Escrow - offer P‑26"
    />
  </ForwardRef>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 16,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingTop": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
        }
      }
    >
      <PeachText
        style={
          {
            "color": "#F56522",
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.5,
            "lineHeight": 24,
            "textTransform": "uppercase",
          }
        }
      >
        checking funding status
      </PeachText>
      <Loading
        color="#F56522"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    </View>
    <HorizontalLine />
    <TradeInfo
      IconComponent={
        <Icon
          color="#65A519"
          id="checkCircle"
          size={16}
        />
      }
      text="funded from peach wallet"
    />
  </View>
</Screen>
`;
